--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <link href="/css/override.css" rel="stylesheet" type="text/css">
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="project h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
+  <header class="project-header">
+    <h1 class="project-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="project-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
