--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,11 +2,11 @@
 layout: default
 ---
 <link href="/css/override.css" rel="stylesheet" type="text/css">
-<article class="project h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="project-header">
-    <h1 class="project-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="project-meta">
+  <header class="post-header">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
@@ -16,6 +16,10 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
       {%- endif -%}</p>
   </header>
+
+  <div class="share-links">
+    {% include sharelinks.html %}
+  </div>
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
