--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,6 +17,10 @@ layout: default
       {%- endif -%}</p>
   </header>
 
+  <div class="post-content e-content" itemprop="articleBody">
+    {{ content }}
+  </div>
+  
   <div class="share-links">
     {% include sharelinks.html %}
   </div>
