--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%Y" -%}
+        {%- assign date_format = site.minima.date_format | default: "%B %Y" -%}
         {{ page.date | date: date_format }}
       </time>
       {% assign author = page.author | default: site.author %}
